# GenshinMap

./: .gitignore  CMakeLists.txt  main.cpp
include/: mapData.hpp  mapInfo.hpp  mapList.hpp  mapWidget.hpp  panable.hpp
src/: mapData.cpp  mapWidget.cpp  panable.cpp
